[package]
name = "devlog-desk"
version = "0.1.0"
description = "Desktop daily update tracker for software engineering teams"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
rusqlite = { version = "0.33", features = ["bundled"] }
